--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,5 @@
 .header {
     width: 100%;
-    /*min-width: 1440px;*/
     height: 109px;
     border: none;
 }
@@ -10,6 +9,7 @@
     width: 100%;
     min-width: 1440px;
     height: 847px;
+    --swiper-pagination-color: #C8161D;
 }
 
 .swiper-container .swiper-slide img {
@@ -20,13 +20,13 @@
 
 .content {
     width: 1440px;
-    margin: 70px auto;
+    margin: 20px auto;
     overflow: auto;
 }
 
 .content .title-wrap {
     width: 484px;
-    margin: 0 auto;
+    margin: 50px auto;
     justify-content: space-around;
 }
 
@@ -56,23 +56,27 @@
     justify-content: space-between;
 }
 
-.content .title-menu .menu-list {
+.content .title-menu .menu-list,
+.content .new-wrap .right .title-wrap .title-list {
     font-size: 28px;
     color: #666;
     cursor: pointer;
     font-weight: bold;
 }
 
-.content .title-menu .menu-list img {
+.content .title-menu .menu-list img,
+.content .new-wrap .right .title-wrap .title-list img {
     display: none;
 }
 
-.content .title-menu .menu-list.selected {
+.content .title-menu .menu-list.selected,
+.content .new-wrap .right .title-wrap .title-list.selected {
     color: #E30112;
     position: relative;
 }
 
-.content .title-menu .menu-list.selected img {
+.content .title-menu .menu-list.selected img,
+.content .new-wrap .right .title-wrap .title-list.selected img {
     display: block;
     position: absolute;
     left: 50%;
@@ -83,7 +87,8 @@
     cursor: default;
 }
 
-.content .title-menu .line {
+.content .title-menu .line,
+.content .new-wrap .right .title-wrap .line {
     width: 1px;
     height: 28px;
     background-color: #D9D9D9;
@@ -143,4 +148,165 @@
     width: 100px;
     margin-left: 60px;
     cursor: pointer;
+}
+
+.content .new-wrap {
+    width: 1440px;
+    margin: 0 auto;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.content .new-wrap .left .swiper-container2 {
+    width: 681px;
+    height: 578px;
+    overflow: hidden;
+    position: relative;
+    --swiper-theme-color: #fff;
+    --swiper-pagination-color: #f0f0f0; /* 两种都可以 */
+}
+
+.content .new-wrap .left .swiper-container2 .swiper-slide img {
+    width: 100%;
+    height: 100%;
+    vertical-align: top;
+}
+
+.content .new-wrap .right {
+    width: 722px;
+}
+
+.content .new-wrap .right .title-wrap {
+    margin: 0;
+    padding: 28px 0;
+}
+
+.content .new-wrap .right .news-wrap {
+    border-top: 1px solid #CBCBCB;
+}
+
+.content .new-wrap .right .news-wrap .news-list {
+    padding: 24px 0 0;
+    align-items: flex-start;
+}
+
+.content .new-wrap .right .news-wrap .news-list .left {
+    position: relative;
+    margin-right: 22px;
+}
+
+.content .new-wrap .right .news-wrap .news-list .left .top,
+.content .new-wrap .right .news-wrap .news-list .left .bottom {
+    width: 82px;
+    height: 82px;
+    border: 1px solid #999;
+}
+
+.content .new-wrap .right .news-wrap .news-list .left .top {
+    font-size: 42px;
+    text-align: center;
+    color: #999;
+    background-color: #fff;
+}
+
+.content .new-wrap .right .news-wrap .news-list .left .top .day {
+    font-size: 16px;
+    margin-top: 4px;
+}
+
+.content .new-wrap .right .news-wrap .news-list .left .bottom {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    z-index: -1;
+}
+
+.content .new-wrap .right .news-wrap .news-list .right {
+    border-bottom: 1px solid #ddd;
+}
+
+.content .new-wrap .right .news-wrap .news-list .right .main-title {
+    width: 600px;
+    max-height: 60px;
+    line-height: 30px;
+    font-size: 20px;
+    overflow: hidden;
+    color: #333;
+}
+
+.content .new-wrap .right .news-wrap .news-list .right .sub-title {
+    width: 610px;
+    max-height: 40px;
+    line-height: 20px;
+    font-size: 18px;
+    overflow: hidden;
+    color: #999;
+    margin: 20px 0;
+}
+
+.periodical {
+    margin-top: 195px;
+    width: 100%;
+    min-width: 1440px;
+    height: 497px;
+    background-image: url("../imgs/bg1.png");
+    background-size: 100%;
+    border-bottom: 4px solid #ff3d00;
+}
+
+.periodical .periodical-wrap {
+    position: relative;
+    width: 1200px;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.periodical .periodical-wrap .text-wrap {
+    padding-top: 76px;
+    color: #fff;
+}
+
+.periodical .periodical-wrap .text-wrap .title {
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.periodical .periodical-wrap .text-wrap .sub-title {
+    font-size: 56px;
+    margin-top: 4px;
+}
+
+.periodical .periodical-wrap .text-wrap .text-content {
+    width: 678px;
+    font-size: 24px;
+    margin-top: 43px;
+    line-height: 30px;
+    max-height: 90px;
+}
+
+.periodical .periodical-wrap .text-wrap .more {
+    width: 220px;
+    height: 80px;
+    line-height: 80px;
+    background: #E30112;
+    box-shadow: 1px 8px 10px rgba(227, 1, 18, 0.21);
+    opacity: 1;
+    text-align: center;
+    margin-top: 60px;
+    font-size: 20px;
+}
+
+.periodical .periodical-wrap img {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 456px;
+    height: 624px;
+}
+
+.footer {
+    min-width: 1440px;
+    width: 100%;
+    height: 280px;
+    border: none;
 }
